fix: reader icon not centered

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -263,7 +263,7 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
 .tab-item .reader-button {
   display: none;
   vertical-align: text-bottom;
-  padding: 0 0.5em 0 0;
+  padding: 0 0.45em;
   font-size: 1.1em !important;
 }
 .tab-item.active .reader-button.can-reader {
